--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "typescript": "^4.3.2",
+    "eslint": "^7.32.0",
+    "eslint-config-alloy": "^4.3.0",
+    "eslint-plugin-react": "^7.25.1",
+    "prettier": "2.4.0",
+    "typescript": "^4.4.3",
     "vite": "^2.5.4"
   }
 }
