--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,6 +1,4 @@
-name: 'Build & Deploy'
-description: 'Deploy React App to Github Pages'
-author: 'idootop'
+name: 'Build & Deploy React App to Github Pages'
 branding:
   color: blue
   icon: code
