--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,18 +12,28 @@ jobs:
       # 第一步 拉代码
       - name: Checkout ⚡️
         uses: actions/checkout@v2
+      
+      # 第二步 缓存node modules
+      - name: Cache node modules 🚮
+        uses: actions/cache@v2
         with:
-          persist-credentials: false
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-build-${{ env.cache-name }}-
+            ${{ runner.OS }}-build-
+            ${{ runner.OS }}-
 
-      # 第二步 安装依赖打包
+      # 第三步 安装依赖打包
       - name: Install and Build 🔧  
         run: |
-          npm install
-          npm run build
-          cp build/index.html build/404.html
+          npm install -g pnpm
+          pnpm install
+          pnpm run build
+          cp dist/index.html dist/404.html
         shell: bash
 
-      # 第三步 将打包后的文件推送至下面填写的分支，部署到github的静态页
+      # 第四步 将打包后的文件推送至下面填写的分支，部署到github的静态页
       - name: Deploy 🚀 
         id: 'deploy'
         uses: JamesIves/github-pages-deploy-action@releases/v3
@@ -32,7 +42,7 @@ jobs:
           BRANCH: static-page # 编译文件分支
           FOLDER: dist # 编译文件的文件夹
       
-      # 第三步 发送邮件通知
+      # 第五步 发送邮件通知
       # - name: Send Notification 📧 
       #   uses: dawidd6/action-send-mail@master
       #   with:
